--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,24 +9,117 @@
     <link rel="stylesheet" href="./css/general.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/queries.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <title>Document</title>
-  </head>
-  <body>
-    <section class="header">
-      <div class="container grid grid--2-cols">
-        <article>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, vero.
-        </article>
-        <article>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, vero.
-        </article>
-        <article>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, vero.
-        </article>
-        <article>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, vero.
-        </article>
-      </div>
+</head>
+
+<body>
+
+    <!-- counter -->
+    <section class="counter_sec">
+        <div class=" back_color">
+            <div class="">
+                <div class="grid grid--2-cols center">
+                    <div>
+                        <div class="counter-col ">
+                            <h2><span class="Count ">1500</span>&nbsp;<i class="fa fa-plus " aria-hidden="true "></i></h2>
+                            <p class="count_p ">JOB OPORTUNITIES</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="counter-col ">
+                            <h2><span class="Count">20</span>&nbsp;<i class="fa fa-plus" aria-hidden="true"></i></h2>
+                            <p class="count_p">CLIENTS</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="counter-col ">
+                            <h2><span class="Count ">1200</span>&nbsp;<i class="fa fa-plus " aria-hidden="true "></i></h2>
+                            <p class="count_p ">EMPLOYEES<span><br></span></p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="counter-col ">
+                            <h2><span class="Count">20</span>&nbsp;<i class="fa fa-plus" aria-hidden="true"></i></h2>
+                            <p class="count_p">CONTRACT</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-  </body>
+    <!-- counnter -->
+    <!-- testimonials -->
+    <section class="testimonials desktop">
+        <div class="grid grid--2-cols pt-4">
+            <div class="card center margin-top--lg">
+                <img class="testi_images" src="./images/vector_01.jpg" alt="">
+                <p class="testi--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.</p>
+            </div>
+            <div class="card center margin-top--lg">
+                <img class="testi_images" src="./images/vector_02.jpg" alt="">
+                <p class="testi--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.</p>
+            </div>
+            <div class="card center margin-top--lg">
+                <img class="testi_images" src="./images/vector_03.jpg" alt="">
+                <p class="testi--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.</p>
+            </div>
+            <div class="card center margin-top--lg">
+                <img class="testi_images" src="./images/vector_04.jpg" alt="">
+                <p class="testi--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.</p>
+            </div>
+        </div>
+    </section>
+    <!-- testimonials -->
+    <!-- testimonials--mobile -->
+    <section class="testimonials mobile">
+        <div class="grid--sm    slideshow-container  pt-4">
+
+            <!-- Full-width images with number and caption text -->
+            <div class=" card mySlides margin-top--sm center fade">
+                <img class="testi_images" src="./images/vector_04.jpg" alt="">
+                <p class="testi--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.</p>
+            </div>
+
+            <div class=" card mySlides margin-top--sm center fade">
+                <img class="testi_images" src="./images/vector_03.jpg" alt="">
+                <p class="testi--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.</p>
+            </div>
+
+            <div class=" card mySlides margin-top--sm center fade">
+                <img class="testi_images" src="./images/vector_02.jpg" alt="">
+                <p class="testi--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.</p>
+            </div>
+            <div class=" card mySlides margin-top--sm center fade">
+                <img class="testi_images" src="./images/vector_01.jpg" alt="">
+                <p class="testi--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque dolorum placeat assumenda inventore architecto quos beatae aliquam deleniti totam illum nulla ipsam.</p>
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+
+        <!-- The dots/circles -->
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+        </div>
+    </section>
+    <!-- testimonials--mobile -->
+</body>
+<script src="./js/scripts.js"></script>
+
 </html>
