added project Section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,138 @@
       </div>
     </section>
     <!-- counter -->
+    <!-- projects -->
+    <section class="projects desktop">
+      <h2 class="center pt-2 pb-2 main-color">Our Work</h2>
+      <div class="grid grid--2-cols">
+        <div class="card center">
+          <img class="proj_image" src="./images/grey.png" alt="" />
+          <p class="testi--text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
+            dolorum placeat assumenda inventore architecto quos beatae aliquam
+            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
+            voluptate veniam eaque itaque dolorum placeat assumenda inventore
+            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+          </p>
+        </div>
+        <div class="card center">
+          <img class="proj_image" src="./images/grey.png" alt="" />
+          <p class="testi--text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
+            dolorum placeat assumenda inventore architecto quos beatae aliquam
+            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
+            voluptate veniam eaque itaque dolorum placeat assumenda inventore
+            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+          </p>
+        </div>
+        <div class="card center">
+          <img class="proj_image" src="./images/grey.png" alt="" />
+          <p class="testi--text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
+            dolorum placeat assumenda inventore architecto quos beatae aliquam
+            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
+            voluptate veniam eaque itaque dolorum placeat assumenda inventore
+            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+          </p>
+        </div>
+        <div class="card center">
+          <img class="proj_image" src="./images/grey.png" alt="" />
+          <p class="testi--text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
+            dolorum placeat assumenda inventore architecto quos beatae aliquam
+            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
+            voluptate veniam eaque itaque dolorum placeat assumenda inventore
+            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+          </p>
+        </div>
+      </div>
+      <h3 class="center pb-2">
+        <a href="" class="main-color">Explore Projects &nbsp;<i class="fa fa-angle-right" aria-hidden="true"></i></a>
+      </h3>
+    </section>
+    <!-- projects -->
+    <!-- projects--mobile -->
+    <section class="projects mobile">
+        <h2 class="center pt-2 pb-2 main-color">Our Work</h2>
+      <div class="grid--sm slideshow-container ">
+        <!-- Full-width images with number and caption text -->
+        <div class="card projmySlides margin-top--sm center fade">
+          <img class="proj_image" src="./images/grey.png" alt="" />
+          <p class="testi--text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
+            dolorum placeat assumenda inventore architecto quos beatae aliquam
+            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
+            voluptate veniam eaque itaque dolorum placeat assumenda inventore
+            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+          </p>
+        </div>
+
+        <div class="card projmySlides margin-top--sm center fade">
+          <img class="proj_image" src="./images/grey.png" alt="" />
+          <p class="testi--text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
+            dolorum placeat assumenda inventore architecto quos beatae aliquam
+            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
+            voluptate veniam eaque itaque dolorum placeat assumenda inventore
+            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+          </p>
+        </div>
+
+        <div class="card projmySlides margin-top--sm center fade">
+          <img class="proj_image" src="./images/grey.png" alt="" />
+          <p class="testi--text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
+            dolorum placeat assumenda inventore architecto quos beatae aliquam
+            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
+            voluptate veniam eaque itaque dolorum placeat assumenda inventore
+            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+          </p>
+        </div>
+        <div class="card projmySlides margin-top--sm center fade">
+          <img class="proj_image" src="./images/grey.png" alt="" />
+          <p class="testi--text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
+            dolorum placeat assumenda inventore architecto quos beatae aliquam
+            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
+            voluptate veniam eaque itaque dolorum placeat assumenda inventore
+            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+          </p>
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1,'projmySlides')">&#10094;</a>
+        <a class="next" onclick="plusSlides(1,'projmySlides')">&#10095;</a>
+      </div>
+      <br />
+
+      <!-- The dots/circles -->
+      <div style="text-align: center">
+        <span class="dot dot-projmySlides" onclick="currentSlide(1,'projmySlides')"></span>
+        <span class="dot dot-projmySlides" onclick="currentSlide(2,'projmySlides')"></span>
+        <span class="dot dot-projmySlides" onclick="currentSlide(3,'projmySlides')"></span>
+        <span class="dot dot-projmySlides" onclick="currentSlide(4,'projmySlides')"></span>
+      </div>
+      <h3 class="center pt-2 pb-2">
+        <a href="" class="main-color">Explore Projects&nbsp <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+      </h3>
+    </section>
+    <!-- projects--mobile -->
     <!-- testimonials -->
     <section class="testimonials desktop">
       <div class="grid grid--2-cols pt-4">
@@ -178,17 +310,17 @@
         </div>
 
         <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <a class="prev" onclick="plusSlides(-1,'mySlides')">&#10094;</a>
+        <a class="next" onclick="plusSlides(1,'mySlides')">&#10095;</a>
       </div>
       <br />
 
       <!-- The dots/circles -->
       <div style="text-align: center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot dot-mySlides" onclick="currentSlide(1,'mySlides')"></span>
+        <span class="dot dot-mySlides" onclick="currentSlide(2,'mySlides')"></span>
+        <span class="dot dot-mySlides" onclick="currentSlide(3,'mySlides')"></span>
+        <span class="dot dot-mySlides" onclick="currentSlide(4,'mySlides')"></span>
       </div>
     </section>
     <!-- testimonials--mobile -->
