Add footer content with mobile-first responsiveness

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+		<!-- Ion Icons -->
+        <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule="" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"></script>
     <title>Document</title>
   </head>
 
@@ -192,6 +195,47 @@
       </div>
     </section>
     <!-- testimonials--mobile -->
+	
+		<!--	Footer section	-->
+		<footer class="footer">
+            <div class="grid--2-cols content">
+                <div>
+                    <h6>IT Services</h6>
+                    <ul>
+                        <li><a href="#">Website</a></li>
+                        <li><a href="#">Mobile App</a></li>
+                        <li><a href="#">Database</a></li>
+                        <li><a href="#">Web Service</a></li>
+                    </ul>
+                </div>
+                <div class="centre-box">
+                    <h6>Let's connect</h6>
+                    <ul class="social-links">
+                        <li>
+                            <a class="footer-link" href="#">
+                                <ion-icon class="social-icon" name="logo-linkedin"></ion-icon>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="footer-link" href="#">
+                                <ion-icon class="social-icon" name="logo-github"></ion-icon>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="footer-link" href="#">
+                                <ion-icon class="social-icon" name="logo-twitter"></ion-icon>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h6>Newsletter</h6>
+                    <p>Subscribe to stay updated</p>
+                    <input class="form-control" name="EMAIL" placeholder="Enter Email " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
+                    <button class="button"><span class="arrow right"></span></button>
+                </div>
+            </div>
+        </footer>
   </body>
   <script src="./js/scripts.js"></script>
 </html>
