Added Services section

--- a/index.html
+++ b/index.html
@@ -8,24 +8,38 @@
     <link rel="stylesheet" href="./css/general.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/queries.css" />
-    <title>Document</title>
+    <title>Services</title>
   </head>
   <body>
-    <section class="header">
-      <div class="container grid grid--2-cols">
-        <article>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, vero.
-        </article>
-        <article>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, vero.
-        </article>
-        <article>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, vero.
-        </article>
-        <article>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, vero.
-        </article>
+
+    <!-- Services Start here -->
+    <section class="header padding-bottom-sm padding-top-sm">
+      <div class="servicesHeader">
+        Services
       </div>
+      
+      <div class="container grid grid--2-cols">
+        <div class=" center margin-top--sm">
+            <img class="testi_images" src="./images/server.png" alt="">
+            <h2 class="h2-color">Server and Storage System</h2>
+        </div>
+
+        <div class="center margin-top--sm">
+          <img class="testi_images" src="./images/IT-services.png" alt="">
+          <h2 class="h2-color">IT Services</h2>  
+        </div>
+
+        <div class="center margin-top--sm">
+          <img class="testi_images" src="./images/security.png" alt="">
+          <h2 class="h2-color">Security Services</h2>
+        </div>
+
+        <div class="center margin-top--sm">
+          <img class="testi_images" src="./images/cloud.png" alt="">
+          <h2 class="h2-color">Cloud Services</h2>
+        </div>
+      </div>
+
     </section>
   </body>
 </html>
