Services section added with explore more option

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
         <h2 class="h2-color">Cloud Services</h2>
       </div>
     </div>
-
+    <div class="center">
+      <a href="#" class="servicesExploreMore">Explore more</a>
+    </div>
   </section>
   <!-- Service Ends here -->
     <!-- counter -->
