--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <h2 class="center pt-2 pb-2 main-color">Our Work</h2>
       <div class="grid grid--2-cols">
         <div class="card center">
-          <img class="proj_image" src="./images/grey.png" alt="" />
+          <img class="proj_image" src="./images/grey.png" alt="projectimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -85,7 +85,7 @@
           </p>
         </div>
         <div class="card center">
-          <img class="proj_image" src="./images/grey.png" alt="" />
+          <img class="proj_image" src="./images/grey.png" alt="projectimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -97,7 +97,7 @@
           </p>
         </div>
         <div class="card center">
-          <img class="proj_image" src="./images/grey.png" alt="" />
+          <img class="proj_image" src="./images/grey.png" alt="projectimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -109,7 +109,7 @@
           </p>
         </div>
         <div class="card center">
-          <img class="proj_image" src="./images/grey.png" alt="" />
+          <img class="proj_image" src="./images/grey.png" alt="projectimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -132,7 +132,7 @@
       <div class="grid--sm slideshow-container ">
         <!-- Full-width images with number and caption text -->
         <div class="card projmySlides margin-top--sm center fade">
-          <img class="proj_image" src="./images/grey.png" alt="" />
+          <img class="proj_image" src="./images/grey.png" alt="projectimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -145,7 +145,7 @@
         </div>
 
         <div class="card projmySlides margin-top--sm center fade">
-          <img class="proj_image" src="./images/grey.png" alt="" />
+          <img class="proj_image" src="./images/grey.png" alt="projectimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -158,7 +158,7 @@
         </div>
 
         <div class="card projmySlides margin-top--sm center fade">
-          <img class="proj_image" src="./images/grey.png" alt="" />
+          <img class="proj_image" src="./images/grey.png" alt="projectimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -170,7 +170,7 @@
           </p>
         </div>
         <div class="card projmySlides margin-top--sm center fade">
-          <img class="proj_image" src="./images/grey.png" alt="" />
+          <img class="proj_image" src="./images/grey.png" alt="projectimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -204,7 +204,7 @@
     <section class="testimonials desktop">
       <div class="grid grid--2-cols pt-4">
         <div class="card center margin-top--xl">
-          <img class="testi_images" src="./images/vector_01.jpg" alt="" />
+          <img class="testi_images" src="./images/vector_01.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -216,7 +216,7 @@
           </p>
         </div>
         <div class="card center margin-top--xl">
-          <img class="testi_images" src="./images/vector_02.jpg" alt="" />
+          <img class="testi_images" src="./images/vector_02.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -228,7 +228,7 @@
           </p>
         </div>
         <div class="card center margin-top--xl">
-          <img class="testi_images" src="./images/vector_03.jpg" alt="" />
+          <img class="testi_images" src="./images/vector_03.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -240,7 +240,7 @@
           </p>
         </div>
         <div class="card center margin-top--xl">
-          <img class="testi_images" src="./images/vector_04.jpg" alt="" />
+          <img class="testi_images" src="./images/vector_04.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -259,7 +259,7 @@
       <div class="grid--sm slideshow-container pt-4">
         <!-- Full-width images with number and caption text -->
         <div class="card mySlides margin-top--sm center fade">
-          <img class="testi_images" src="./images/vector_04.jpg" alt="" />
+          <img class="testi_images" src="./images/vector_04.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -272,7 +272,7 @@
         </div>
 
         <div class="card mySlides margin-top--sm center fade">
-          <img class="testi_images" src="./images/vector_03.jpg" alt="" />
+          <img class="testi_images" src="./images/vector_03.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -285,7 +285,7 @@
         </div>
 
         <div class="card mySlides margin-top--sm center fade">
-          <img class="testi_images" src="./images/vector_02.jpg" alt="" />
+          <img class="testi_images" src="./images/vector_02.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -297,7 +297,7 @@
           </p>
         </div>
         <div class="card mySlides margin-top--sm center fade">
-          <img class="testi_images" src="./images/vector_01.jpg" alt="" />
+          <img class="testi_images" src="./images/vector_01.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
