Review comment changes

--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
 
     <div class="container grid grid--2-cols">
       <div class=" center margin-top--sm">
-        <img class="testi_images" src="./images/server.png" alt="">
+        <img src="./images/server.png" alt="Server Logo">
         <h2 class="h2-color">Server and Storage System</h2>
       </div>
 
       <div class="center margin-top--sm">
-        <img class="testi_images" src="./images/IT-services.png" alt="">
+        <img src="./images/IT-services.png" alt="IT-Services Logo">
         <h2 class="h2-color">IT Services</h2>
       </div>
 
       <div class="center margin-top--sm">
-        <img class="testi_images" src="./images/security.png" alt="">
+        <img src="./images/security.png" alt="Security Logo">
         <h2 class="h2-color">Security Services</h2>
       </div>
 
       <div class="center margin-top--sm">
-        <img class="testi_images" src="./images/cloud.png" alt="">
+        <img src="./images/cloud.png" alt="Cloud Logo">
         <h2 class="h2-color">Cloud Services</h2>
       </div>
     </div>
