Fixed favicon and added footer in about us page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="./imageS/logo-sm.png" />
     <!-- Font awesome -->
     <link
       rel="stylesheet"
@@ -40,7 +42,7 @@
     <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"></script>
 
-    <title>Document</title>
+    <title>Lambton Consultancy</title>
   </head>
 
   <body>
@@ -481,7 +483,7 @@
                     <button class="button"><span class="arrow right"></span></button>
                 </div>
             </div>
-        </footer>
+    </footer>
   </body>
   <script src="./js/scripts.js"></script>
   <script src="./js/typed.js"></script>
