--- a/aboutus.html
+++ b/aboutus.html
@@ -280,7 +280,7 @@
                 <li>
                   <a class="social-link" href="#">
                     <ion-icon
-                      class="social-icon"
+                      class="team-social-icon"
                       name="logo-facebook"
                     ></ion-icon>
                   </a>
@@ -288,7 +288,7 @@
                 <li>
                   <a class="social-link" href="#">
                     <ion-icon
-                      class="social-icon"
+                      class="team-social-icon"
                       name="logo-linkedin"
                     ></ion-icon>
                   </a>
@@ -296,7 +296,7 @@
                 <li>
                   <a class="social-link" href="#">
                     <ion-icon
-                      class="social-icon"
+                      class="team-social-icon"
                       name="logo-twitter"
                     ></ion-icon>
                   </a>
@@ -322,7 +322,7 @@
                 <li>
                   <a class="social-link" href="#">
                     <ion-icon
-                      class="social-icon"
+                      class="team-social-icon"
                       name="logo-facebook"
                     ></ion-icon>
                   </a>
@@ -330,7 +330,7 @@
                 <li>
                   <a class="social-link" href="#">
                     <ion-icon
-                      class="social-icon"
+                      class="team-social-icon"
                       name="logo-linkedin"
                     ></ion-icon>
                   </a>
@@ -338,7 +338,7 @@
                 <li>
                   <a class="social-link" href="#">
                     <ion-icon
-                      class="social-icon"
+                      class="team-social-icon"
                       name="logo-twitter"
                     ></ion-icon>
                   </a>
@@ -364,7 +364,7 @@
                 <li>
                   <a class="social-link" href="#">
                     <ion-icon
-                      class="social-icon"
+                      class="team-social-icon"
                       name="logo-facebook"
                     ></ion-icon>
                   </a>
@@ -372,7 +372,7 @@
                 <li>
                   <a class="social-link" href="#">
                     <ion-icon
-                      class="social-icon"
+                      class="team-social-icon"
                       name="logo-linkedin"
                     ></ion-icon>
                   </a>
@@ -380,7 +380,7 @@
                 <li>
                   <a class="social-link" href="#">
                     <ion-icon
-                      class="social-icon"
+                      class="team-social-icon"
                       name="logo-twitter"
                     ></ion-icon>
                   </a>
@@ -406,7 +406,7 @@
                 <li>
                   <a class="social-link" href="#">
                     <ion-icon
-                      class="social-icon"
+                      class="team-social-icon"
                       name="logo-facebook"
                     ></ion-icon>
                   </a>
@@ -414,7 +414,7 @@
                 <li>
                   <a class="social-link" href="#">
                     <ion-icon
-                      class="social-icon"
+                      class="team-social-icon"
                       name="logo-linkedin"
                     ></ion-icon>
                   </a>
@@ -422,7 +422,7 @@
                 <li>
                   <a class="social-link" href="#">
                     <ion-icon
-                      class="social-icon"
+                      class="team-social-icon"
                       name="logo-twitter"
                     ></ion-icon>
                   </a>
@@ -459,7 +459,7 @@
             </li>
             <li>
               <a class="footer-link" href="#">
-                <ion-icon class="social-icon" name="logo-github"></ion-icon>
+                <ion-icon class="social-icon" name="logo-facebook"></ion-icon>
               </a>
             </li>
             <li>
