--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                         </li>
                         <li>
                             <a class="footer-link" href="#">
-                                <ion-icon class="social-icon" name="logo-github"></ion-icon>
+                                <ion-icon class="social-icon" name="logo-facebook"></ion-icon>
                             </a>
                         </li>
                         <li>
