added projects sections and some css changes

--- a/aboutus.html
+++ b/aboutus.html
@@ -66,6 +66,7 @@
             <ul class="menu">
               <li>
                 <a href="./index.html" class="menu-link">Home</a>
+               
               </li>
 
               <li>
@@ -78,6 +79,12 @@
                   <a href="#quality" class="sublink">Qualities</a>
                 </div>
               </li>
+              <li>
+                <a href="./projects.html" class="dropdown-link menu-link"
+                >Projects</a
+              >
+              </li>
+             
             </ul>
           </nav>
 
