Added contact us page

--- a/aboutus.html
+++ b/aboutus.html
@@ -78,6 +78,9 @@
                   <a href="#quality" class="sublink">Qualities</a>
                 </div>
               </li>
+              <li>
+                <a href="./contactus.html" class="menu-link">Contact us</a>
+              </li>
             </ul>
           </nav>
 
