--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
               <li>
                 <a href="./aboutus.html" class="menu-link">About us</a>
               </li>
+              <li>
+                <a href="./contactus.html" class="menu-link">Contact us</a>
+              </li>
             </ul>
           </nav>
 
