--- a/contactus.html
+++ b/contactus.html
@@ -77,6 +77,9 @@
                         </div>
                     </li>
                     <li>
+                        <a href="./projects.html" class="menu-link">Projects</a>
+                    </li>
+                    <li>
                         <a href="./contactus.html" class="menu-link">Contact us</a>
                     </li>
                 </ul>
