--- a/projects.html
+++ b/projects.html
@@ -75,6 +75,9 @@
                   >Projects</a
                 >
               </li>
+              <li>
+                <a href="./contactus.html" class="menu-link">Contact us</a>
+              </li>
             </ul>
           </nav>
 
