refinements careers page

--- a/aboutus.html
+++ b/aboutus.html
@@ -69,7 +69,7 @@
 
               <li>
                 <a href="./aboutus.html" class="dropdown-link menu-link"
-                  >About us</a
+                  >About</a
                 >
                 <div class="dropdown-content">
                   <a href="#choose" class="sublink">Choose Us</a>
@@ -78,12 +78,13 @@
                 </div>
               </li>
               <li>
-                <a href="./projects.html" class="dropdown-link menu-link"
-                  >Projects</a
-                >
+                <a href="./projects.html" class="menu-link">Projects</a>
               </li>
               <li>
-                <a href="./contactus.html" class="menu-link">Contact us</a>
+                <a href="./contactus.html" class="menu-link">Contact</a>
+              </li>
+              <li>
+                <a href="./careers.html" class="menu-link">Careers</a>
               </li>
             </ul>
           </nav>
