--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
               <li>
                 <a href="./aboutus.html" class="menu-link"
-                  >About us</a
+                  >About</a
                 >
               </li>
               <li>
@@ -79,7 +79,10 @@
               >
               </li>
               <li>
-                <a href="./contactus.html" class="menu-link">Contact us</a>
+                <a href="./contactus.html" class="menu-link">Contact</a>
+              </li>
+              <li>
+                <a href="./careers.html" class="menu-link">Careers</a>
               </li>
             </ul>
           </nav>
@@ -99,7 +102,7 @@
               <div class="hero-text1">Welcome To Lambton Consultancy</div>
               <div class="hero-text2">We <span class="typed"></span></div>
               <a
-                href="#projects"
+                href="./projects.html"
                 class="btn btn--full btn--padding-lg margin-top--sm"
                 >Explore our work</a
               >
