--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
               </li>
 
               <li>
-                <a href="./aboutus.html" class="menu-link">About us</a>
+                <a href="./aboutus.html" class="menu-link">About</a>
               </li>
               <li>
                 <a href="./projects.html" class="dropdown-link menu-link"
@@ -76,7 +76,10 @@
                 >
               </li>
               <li>
-                <a href="./contactus.html" class="menu-link">Contact us</a>
+                <a href="./contactus.html" class="menu-link">Contact</a>
+              </li>
+              <li>
+                <a href="./careers.html" class="menu-link">Careers</a>
               </li>
             </ul>
           </nav>
